--- a/templates/index/hello.html.twig
+++ b/templates/index/hello.html.twig
@@ -6,5 +6,9 @@
 
     <h3>Hello {{ prenom }} !!!</h3>
 
+    <h4>Votre email: {{email}} </h4>
+    <h4>Votre message: {{message}} </h4>
+    
+
 
 {% endblock %}
